--- a/index.html
+++ b/index.html
@@ -5,4 +5,7 @@
         <meta http-equiv="content-type" content="text/html; charset=utf-8" />
         <meta http-equiv="refresh" content="0;url=/en/" />
     </head>
+    <body>
+        Redirecting...
+    </body>
 </html>
